# wagtail-template

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CODEOWNERS  CODEOWNERS.jinja  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile-backend-dev  Dockerfile-frontend-dev  Dockerfile.jinja  Justfile  LICENSE  Makefile  Procfile  README.adoc  README.adoc.jinja  copier.yml  devfile.yaml  docker-compose.yml  pyproject.toml  {{ _copier_conf.answers_file }}.jinja
.github/workflows/: codeql-analysis.yml
backend/: parcel_loader.py  pyproject.toml  settings.py  urls.py
backend/accounts/: README.adoc  models.py  wagtail_hooks.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_managers_and_more.py
backend/dashboard/templates/wagtailadmin/: admin_base.html  base.html  home.html  login.html
backend/example/: models.py  panels.py  views.py  wagtail_hooks.py
backend/example/templates/example/: calendar.html  custom_panel.html
backend/generic/: admin.py  models.py
backend/generic/templatetags/: parcel_tags.py
backend/generic/utils/: time.py
backend/static/: admin-theme.css
backend/templates/: base.html
backend/templates/registration/: login.html
backend/templates/wagtailadmin/: admin_base.html  base.html  home.html  login.html
backend/templates/wagtailusers/users/: list.html
deploy/: README.adoc
frontend/: package.json  tailwind.config.js
frontend/src/: styles.pcss
