[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool]

[tool.poetry]
name = "wagtail-template"
version = "1.0.0"
description = "Base template for Wagtail-based projects"
license = "MIT"
authors = ["Anton Alekseev <hi@aalekseev.me>"]
repository = "https://github.com/aalekseev/wagtail-template"

[tool.poetry.dependencies]
# TODO: Update to Python 3.10
#   Currently copier can't use Python 3.10 version
#   as it depends on iteration-utilities which does not yet have a 3.10 support
python = "==3.9.*"
copier = "^6.0"
# TODO: Check if we still need to freeze this package version
#   https://github.com/copier-org/copier/issues/574
markupsafe = "<2.1.0"

[[tool.poetry.source]]
name = "the_pypi"
url = "https://pypi.org/simple"
default = true
